# doraemon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
deployment/: release.Dockerfile
migrations/2020-02-29-053002_create_url/: down.sql  up.sql
migrations/2020-03-01-144331_create_sso/: up.sql
migrations/2020-04-29-024032_create_client_id/: down.sql  up.sql
migrations/2020-05-10-063403_url_with_username/: down.sql  up.sql
migrations/2020-05-10-072102_url_username_index/: down.sql  up.sql
migrations/2020-05-14-145836_user_email_activation/: down.sql  up.sql
src/: app_data.rs  config.rs  error.rs  main.rs  schema.rs
src/auth/: error.rs  mod.rs  model.rs
src/core/: greeter.rs  mod.rs
src/core/resizer/: form.rs  getter.rs  mod.rs  processor.rs
src/core/sso/: activate.rs  authorize.rs  error.rs  inspect.rs  login.rs  mod.rs  register.rs  token.rs  utils.rs
src/core/url_shortener/: create.rs  delete.rs  exchange.rs  mod.rs  read.rs  redirect_by_key.rs  update.rs  utils.rs
src/database/: mod.rs
src/database/handler/: client_credential.rs  mod.rs  url.rs  user.rs
src/templater/: error.rs  mod.rs  tera_based.rs
src/templates/: base.html
src/templates/account/: login.html  register.html  resend_activation_mail.html
var/: config.example.toml
