[package]
name = "doraemon"
version = "0.2.2"
authors = ["Agus Sentosa Hermawan <agus.sentosa787@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.HTML

[dependencies]
base64 = "0.11.0"
serde_json = "1.0.48"
magic-crypt = "2.1.10"
bcrypt = "0.6.1"
serde = "1.0.104"
toml = "0.5.6"
actix-web = "2.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
futures = "0.3.4"
image = "0.23.0"
uuid = "0.8.1"
rand = "0.7.3"
diesel = { version = "1.0.0", features = ["postgres"] }
url = "2.1.1"
tera = "1.2.0"
actix-cors="0.2.0"
